[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Window",
  "WebSocket",
  "MessageEvent",
  "ErrorEvent",
  "Event",
  "Location",
  "EventTarget",
  "CloseEvent",
  "MouseEvent",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "DomRect",
]
